--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,484 @@
-//
+@font-face {
+    font-family: fira-sans;
+    src: url("assets/fonts/FiraSans-Regular.otf")
+}
+
+@font-face {
+    font-family: fira-sans-italic;
+    src: url("assets/fonts/FiraSans-ExtraLightItalic.ttf")
+}
+
+body, html {
+    font-family: fira-sans;
+    margin: 0px;
+    padding: 0px;
+    font-size: 62.5%;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.header {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+}
+
+.header .bg-image {
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+    background-image: url("assets/imgs/bannerRussia.jpg");
+    background-size: cover;
+    background-color: #fff;
+    background-position: center center;
+    position: absolute;
+}
+
+ul {
+    padding: 0px;
+    margin: 0 px;
+}
+li {
+    list-style: none;
+}
+
+.main-top-nav {
+    width: 100%;
+    position: absolute;
+    z-index: 2;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 6rem;
+    color: #fff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.top-nav-bar {
+    margin: 0px;
+}
+.top-nav-bar > li {
+    float: left;
+}
+
+#top-right-icons {
+    float: right;
+    margin-right: 1.5rem;
+}
+
+#top-right-icons > div {
+    float: left;
+    width: 3rem;
+    height: 4.4rem;
+    margin: 0;
+    padding-top: 1.6rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+#top-right-icons > div img {
+    max-width: 4.2rem;
+    width: 100%;
+    height: auto;
+}
+
+.logo-icon {
+    padding-left: 15px;
+    width: 85px;
+    height: 68px;
+}
+
+.logo-icon img {
+    margin-top: 8px;
+    max-width: 100%;
+    max-height: auto;
+}
+
+
+.site-pages > div {
+
+    float: left;
+    padding-left: 28px;
+    padding-right: 28px;
+    height: 60px;
+}
+
+.site-pages > div > a{
+    vertical-align: middle;
+    font-style: normal;
+}
+
+.chevron-down-icon {
+    position: relative;
+    width: 100% - 10px;
+    height: 2.5rem;
+    margin-top: -4.5rem;
+    padding-left: 1rem;
+    text-align: center;
+}
+
+.chevron-down-icon img {
+    width: auto;
+    height: 100%;
+}
+
+.header .text-center {
+    height: 100%;
+    text-align: center!important;
+    position: relative;
+    top: 50%;
+}
+
+.text-center .logo {
+    width: 100%;
+}
+
+.text-center .logo img {
+    margin-top: -21rem;
+    max-width: 100%;
+    width: 37rem;
+    height: auto;
+}
+
+h1.h1-top {
+    letter-spacing: 0;
+    line-height: 1.4;
+    font-family: fira-sans-italic, sans-serif;
+    text-shadow: 0 1px 5px #000, 0 0 2px #000;
+    font-style: oblique;
+    font-weight: 200;
+    font-size: 2.7rem!important;
+    color: #fff;
+    margin-top: -2.5rem;
+}
+
+.main-1-block {
+    font-family: fira-sans-italic, sans-serif;
+    font-weight: 400;
+    font-size: 3rem;
+    font-style: oblique;
+    color: #fff;
+    background-color: #0072ce;
+    height: 61rem;
+    text-align: center;
+    line-height: 1.6;
+}
+
+.main-1-content {
+    padding: 15rem 0;
+    margin: 0 13.16rem;
+    height: 19rem;
+}
+
+.main-1-content .phrase {
+    margin-bottom: 40px;
+}
+
+.main-1-content .button {
+    font-family: fira-sans, sans-serif;
+    font-style: normal;
+    font-size: 2rem;
+    margin-top: 20px;
+}
+
+.main-1-content .button a {
+    border-color: #fff;
+    margin-top: 2rem;
+    border: .2rem solid #fff;
+    font-weight: 500;
+    line-height: 1;
+    padding: .85em 1em;
+}
+.main-1-buttons {
+    height: 12rem;
+    font-family: fira-sans, sans-serif;
+    font-style: normal;
+    font-size: 1.8rem;
+}
+
+.main-1-buttons ul {
+    margin: 0;
+}
+
+.main-1-buttons li {
+    float:left;
+    width: 25%;
+    height: 100%;
+}
+.main-1-buttons li:nth-child(1) {
+    background-color: #00ab9c;
+}
+
+.main-1-buttons li:nth-child(2) {
+    background-color: #004267;
+}
+
+.main-1-buttons li:nth-child(3) {
+    background-color: #913393;
+}
+
+.main-1-buttons li:nth-child(4) {
+    background-color: #8cc646;
+}
+
+.main-1-buttons li a {
+    width:100%;
+    height: 100%;
+    text-align: center;
+    display: table;
+    padding-top: 5rem;
+}
+
+.introduction {
+    margin: 0 auto;
+    margin-top: 25px;
+    max-width: 100rem;
+    width: 100%;
+}
+
+.introduction p {
+    text-align: justify;
+    font-size: 1.7rem;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #666;
+}
+
+.blue-area-with-tablet {
+    height: 32rem;
+    padding: 2% 0;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+    max-width: 100rem;
+    width: 100%;
+    background-color: #0072ce;
+    text-align: justify;
+    color: #fff;
+    font-family: fira-sans, sans-serif;
+}
+
+.blue-area-with-tablet > div {
+    width: 100%;
+}
+
+.blue-area-with-tablet > div > div {
+    margin-top: 7px;
+    width: 50%;
+    box-sizing: border-box;
+}
+
+.blue-area-with-tablet .tablet-image {
+    float: left;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    text-align: center;
+}
+
+.blue-area-with-tablet .mission-and-vision {
+    float: right;
+    padding-right: 4rem;
+    padding-left: 1.5rem;
+}
+
+.blue-area-with-tablet span {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.5;
+}
+
+.blue-area-with-tablet p{
+    font-size: 1.7rem;
+    font-weight: 400;
+    line-height: 1.6;
+    margin: 0;
+}
+
+.info-columns {
+    margin: 0 auto;
+    margin-bottom: 5rem;
+    max-width: 100rem;
+    width: 100%;
+    font-family: fira-sans, sans-serif;
+}
+
+.info-columns .column {
+    float: left;
+    width: 33.33333%;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    box-sizing: border-box;
+}
+
+.info-columns .column img {
+    max-width: 100%;
+    height: auto;
+}
+.info-columns .column .info-header {
+    line-height: 1.1em;
+    font-weight: 400;
+    color: #535353;
+    margin-top: 10px;
+    font-style: italic;
+    text-align: justify;
+    font-size: 2.7rem;
+    margin-bottom: .5rem;
+    height: 10rem;
+    box-sizing: border-box;
+}
+
+.info-columns .column p {
+    font-size: 1.8rem;
+    color: #000;
+    text-align: justify;
+    font-weight: 400;
+    line-height: 1.6;
+    margin: 0;
+}
+
+.info-columns .column p a {
+    color: #0072ce;
+    text-decoration: none;
+    line-height: inherit;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.clearfix {
+    clear: both;
+}
+footer {
+    padding: 2rem 0;
+    background-color: #f0f0f0;
+    color: #707070;
+    font-family: fira-sans, sans-serif;
+}
+
+footer ul {
+    margin: 0;
+    padding: 0;
+}
+footer .line-1 {
+    margin: 0 auto;
+    max-width: 100rem;
+    width: 100%;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 4rem;
+    font-size: 14px;
+}
+
+footer .line-1 li {
+    padding-right: 1.8rem;
+    padding-left: 0;
+
+}
+
+footer .line-1 > div:nth-child(2) li:last-child {
+    width: 60px;
+}
+footer .line-1 img {
+    width: 100%;
+    height: auto;
+    content:url("assets/imgs/bot_logo.PNG");
+}
+
+footer .line-1 img:hover {
+    content:url("assets/imgs/bot_logo_hover.PNG");
+}
+
+footer .line-1 > div:first-child {
+    float: left;
+}
+
+footer .line-1 > div:first-child > ul {
+    margin-bottom: 1rem;
+    margin-left: 1.5rem;
+    list-style-position: outside;
+}
+footer .line-1 > div:nth-child(2) {
+    float: right;
+}
+
+footer li {
+    float: left;
+}
+
+footer li a{
+    color: #707070;
+}
+
+footer .line-2 {
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0 1.5rem;
+    max-width: 100rem;
+    width: 100%;
+    color: #707070;
+    margin-top: 10px;
+    font-family: "Helvetica Neue",Helvetica,Arial,Sans;
+    opacity: .5;
+    font-size: 1rem;
+    letter-spacing: .1em;
+    text-align: left;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+#dropdown-menu {
+    padding-top: 68px;
+    background-color: #0072ce;
+    z-index: 1;
+}
+
+#dropdown-menu > ul {
+    margin: 0;
+    padding: 0;
+}
+
+#dropdown-menu > ul {
+    border-top: .8rem solid transparent;
+    box-shadow: inset 0 1px 0 #b3d5f0;
+    padding-top: 25px;
+    margin: 0;
+}
+
+#dropdown-menu > ul > li {
+    float: left;
+    width: 16.66667%;
+    line-height: 1.3;
+    padding: 0 1rem 2rem;
+    box-sizing: border-box;
+    text-align: left;
+}
+
+#dropdown-menu > ul > li > a.title {
+    white-space: normal;
+    font-size: 16px;
+    color: #a6ceee;
+    font-weight: 400;
+    cursor: pointer;
+    padding: 7px 10px;
+    transition: color .3s ease;
+    display: block;
+}
+
+#dropdown-menu > ul > li > ul {
+    margin-top: 30px;
+    padding-left: 1rem;
+}
+#dropdown-menu > ul > li > ul > li {
+    text-align: left;
+    font-size: 1.3rem;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+}
+
+#dropdown-menu > ul > li > ul > li > a:hover {
+    text-decoration: underline;
+}
