--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30,7 +30,7 @@ a {
   overflow: hidden;
   width: 100%;
   height: 100vh;
-  background-image: url("../../public/assets/imgs/bannerRussia.jpg");
+  background-image: url("../assets/imgs/bannerRussia.jpg");
   background-size: cover;
   background-color: #fff;
   background-position: center center;
@@ -386,11 +386,11 @@ footer .line-1 > div:nth-child(2) li:last-child {
 footer .line-1 img {
   width: 100%;
   height: auto;
-  content: url("../../public/assets/imgs/bot_logo.PNG");
+  content: url("../assets/imgs/bot_logo.PNG");
 }
 
 footer .line-1 img:hover {
-  content: url("../../public/assets/imgs/bot_logo_hover.PNG");
+  content: url("../assets/imgs/bot_logo_hover.PNG");
 }
 
 footer .line-1 > div:first-child {
