--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30,7 +30,6 @@ a {
   overflow: hidden;
   width: 100%;
   height: 100vh;
-  background-image: url("../assets/imgs/bannerRussia.jpg");
   background-size: cover;
   background-color: #fff;
   background-position: center center;
@@ -385,7 +384,7 @@ footer .line-1 > div:nth-child(2) li:last-child {
 
 footer .line-1 img {
   width: 100%;
-  height: auto;
+  height: 50px;
   content: url("../assets/imgs/bot_logo.PNG");
 }
 
